fix line wrapping in price description tooltip (#1808)

--- a/src/main/core/Resources/less/layout/components/popovers.less
+++ b/src/main/core/Resources/less/layout/components/popovers.less
@@ -22,7 +22,7 @@
 
 .popover-content {
     padding: @popover-content-padding;
-    white-space: pre;
+    white-space: pre-line;
 }
 
 .popover-list-group {
